--- a/Mobile_Computing_project/app/src/main/res/layout/fragment_sign_in.xml
+++ b/Mobile_Computing_project/app/src/main/res/layout/fragment_sign_in.xml
@@ -85,7 +85,7 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Switch to Sign Up if you have an accout alread!"
+        android:text="Switch to Sign in if you have an accout alread!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
